2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-calendar-weather.eplug.in: Add a . to the end of description.

2005-02-02  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (INCLUDES): Use $(weatherdir) instead of duplicating the
	define for it below
	(weatherdir): Fix to use the correct versioned directory

2005-01-26  David Trowbridge <trowbrds@cs.colorado.edu>

	* org-gnome-calendar-weather.eplug.in: fix typo

2005-01-25  Rodrigo Moya <rodrigo@novell.com>

	* calendar-weather.c (e_plugin_lib_enable): set all new categories to
	not searchable.

2005-01-12  David Trowbridge <trowbrds@cs.colorado.edu>

	* calendar-weather.c (e_calendar_weather_units): fix spelling

2005-01-12  David Trowbridge <trowbrds@cs.colorado.edu>

	* calendar-weather.c, org-gnome-calendar-weather.eplug.in: use
	a single setting for metric/imperial rather than separate
	temperature and snowfall settings

2005-01-10  Rodrigo Moya <rodrigo@novell.com>

	* calendar-weather.c (create_source_selected): use HIG-compliant
	button order.

2005-01-07  Rodrigo Moya <rodrigo@novell.com>

	* Makefile.am: define EDS's datadir, needed to get to the
	Locations.xml file.

	* calendar-weather.c (load_locations): use EDS's datadir for the
	Locations.xml file full path.

2005-01-07  Rodrigo Moya <rodrigo@novell.com>

	* Makefile.am: define weatherdatadir here, no need to use e-d-s's one,
	use evolution's instead.

2005-01-06  David Trowbridge <trowbrds@cs.colorado.edu>

	* Initial import of weather properties plugin