@@ -1,18 +1,16 @@
 eds_datadir = `pkg-config --variable=privdatadir evolution-data-server-1.2`
+weatherdatadir = $(datadir)/evolution/$(BASE_VERSION)/weather
 
 INCLUDES =									\
 	-I$(top_srcdir)/shell							\
 	$(EVOLUTION_CFLAGS)							\
 	$(EVOLUTION_CALENDAR_CFLAGS)						\
 	$(SOURCE_SEL_CFLAGS)							\
-	-DWEATHER_DATADIR=\""$(weatherdir)"\"	\
+	-DWEATHER_DATADIR=\""$(weatherdatadir)"\"				\
 	-DWEATHER_EDS_DATADIR=\""$(eds_datadir)/weather"\"
 
 @EVO_PLUGIN_RULE@
 
-# These will actually install into the e-d-s share directory, but
-# if the plugin is disabled, we aren't going to be needing them.
-weatherdatadir = $(datadir)/evolution/$(BASE_VERSION)/weather
 weatherdata_DATA = \
 	category_weather_cloudy_16.png		\
 	category_weather_fog_16.png		\
