@@ -1,3 +1,8 @@
+2005-03-22  David Trowbridge  <trowbrds@cs.colorado.edu>
+
+	* Makefile.am: Use $(weatherdatadir) rather than $(weatherdir), get
+	rid of an incorrect comment
+
 2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>
 
 	* org-gnome-calendar-weather.eplug.in: Add a . to the end of description.
